Adding - Cart & Checkout End-Points
